Fix-Resolve-navbar-style-breaking-in-high-contrast-mode

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -7,6 +7,13 @@
   height: var(--header-height);
   justify-content: space-between;
   padding: 0 5px;
+  forced-color-adjust: none;
+}
+
+@media (forced-colors) {
+  .universal-nav {
+    background-color: var(--gray-90);
+  }
 }
 
 @media (min-width: 401px) {
@@ -73,6 +80,13 @@
   position: absolute;
   right: 0;
   width: 100%;
+  forced-color-adjust: none;
+}
+
+@media (forced-colors) {
+  .nav-list {
+    background-color: var(--gray-90);
+  }
 }
 
 @media (min-width: 980px) {
@@ -244,6 +258,14 @@ li > button.nav-link-signout:not([aria-disabled='true']):is(:hover, :focus) {
   justify-content: center;
   min-width: var(--header-element-size);
   padding: 0 4px;
+  forced-color-adjust: none;
+}
+
+@media (forced-colors) {
+  .exposed-button-nav,
+  .lang-button-nav {
+    background-color: var(--gray-90);
+  }
 }
 
 @media (min-width: 601px) {
